Include cookie banner CSS and JS in index.html
Added cookie consent banner styles and script.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
+  
+  <link rel="stylesheet" href="https://cookie.api.miniutti.it/cookie-mini/cookiebanner.css">
+  <script defer src="https://cookie.api.miniutti.it/cookiebanner.js" data-ga="G-XXXXXXXXXX"></script>
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>tobia.me | Portfolio Videomaker</title>
