Change cookie banner links and add data attributes
Updated cookie banner resources to use new GitHub Pages links and added additional data attributes.

--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html lang="it">
 <head>
   
-  <link rel="stylesheet" href="https://cookie.api.miniutti.it/cookie-mini/cookiebanner.css">
-  <script defer src="https://cookie.api.miniutti.it/cookiebanner.js" data-ga="G-XXXXXXXXXX"></script>
+  <link rel="stylesheet" href="https://TUOUSER.github.io/cookie-mini/cookiebanner.css">
+  <script defer src="https://TUOUSER.github.io/cookie-mini/cookiebanner.js"
+          data-ga="G-XXXXXXXXXX"
+          data-policy="/cookie.html"
+          data-privacy="/privacy.html"
+          data-manage="floating"
+          data-manage-text="Cookie"></script>
 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
