--- a/privacy.html
+++ b/privacy.html
@@ -138,18 +138,6 @@
       box-shadow:var(--shadow-xl);
     }
 
-    /* === IMPORTANT FIX ===
-       Animations hide elements ONLY when JS is active.
-       Without JS, everything is visible (no "only hero + footer" issue).
-    */
-    .fade-up{opacity:1; transform:none;}
-    html.js .fade-up{
-      opacity:0;
-      transform:translateY(24px);
-      transition:opacity 0.9s ease, transform 0.9s ease;
-    }
-    html.js .fade-up.visible{opacity:1;transform:translateY(0);}
-
     /* Hero */
     .legal-hero{
       padding:2.6rem;
@@ -381,10 +369,6 @@
     }
   </style>
 
-  <script>
-    // Enable JS-only reveal behavior (prevents "content invisible" if JS fails)
-    document.documentElement.classList.add('js');
-  </script>
 </head>
 
 <body>
@@ -405,7 +389,7 @@
 
   <main id="contenuto">
     <!-- HERO -->
-    <section class="panel legal-hero fade-up">
+    <section class="panel legal-hero">
       <h1>Privacy <span>Policy</span></h1>
       <p>
         Questa informativa descrive come <strong>Tobia Miniutti</strong> (Titolare) tratta i dati personali quando visiti
@@ -422,7 +406,7 @@
     </section>
 
     <!-- GRID -->
-    <section class="legal-grid fade-up">
+    <section class="legal-grid">
       <!-- TOC -->
       <aside class="toc" aria-label="Indice">
         <h2>Indice</h2>
@@ -439,7 +423,6 @@
         <a href="#s11">11. Minori</a>
         <a href="#s12">12. Trasparenza + casi particolari</a>
         <a href="#s13">13. Modifiche</a>
-        <a href="#s14">Appendice: checkbox form</a>
       </aside>
 
       <!-- CONTENT -->
@@ -715,21 +698,6 @@
           <p>Possiamo aggiornare questa informativa. La versione aggiornata sarà pubblicata qui con nuova data di aggiornamento.</p>
         </article>
 
-        <article class="panel section" id="s14">
-          <h2>Appendice: checkbox form</h2>
-          <p>Testo consigliato (presa visione, non consenso “inutile”):</p>
-
-          <div class="snippet" role="region" aria-label="Snippet checkbox privacy">
-            <pre>&lt;label class="privacy-check"&gt;
-  &lt;input type="checkbox" name="privacy_read" required&gt;
-  &lt;span&gt;
-    Dichiaro di aver letto l’&lt;a href="/privacy.html" target="_blank" rel="noopener noreferrer"&gt;Informativa Privacy&lt;/a&gt;
-    e comprendo che i dati saranno trattati per rispondere alla mia richiesta.
-  &lt;/span&gt;
-&lt;/label&gt;</pre>
-          </div>
-        </article>
-
       </div>
     </section>
   </main>
@@ -769,21 +737,6 @@
   <script>
     // Year
     document.getElementById('year').textContent = new Date().getFullYear();
-
-    // Reveal on scroll (safe)
-    const faders = document.querySelectorAll('.fade-up');
-    const revealObserver = new IntersectionObserver((entries, obs) => {
-      entries.forEach(entry => {
-        if (!entry.isIntersecting) return;
-        entry.target.classList.add('visible');
-        obs.unobserve(entry.target);
-      });
-    }, { threshold: 0.14, rootMargin: "0px 0px -40px 0px" });
-
-    faders.forEach((el, i) => {
-      el.style.transitionDelay = `${Math.min(i * 55, 220)}ms`;
-      revealObserver.observe(el);
-    });
 
     // Scroll progress
     const progress = document.querySelector('.scroll-progress');
