--- a/index.html
+++ b/index.html
@@ -660,6 +660,130 @@
         transform: none !important;
       }
     }
+
+    /* Site Status Banner (tobia.me style) */
+.site-banner{
+  position: sticky;
+  top: var(--header-h);
+  z-index: 1100;
+  padding: 0.75rem 2rem;
+  border-bottom: 1px solid rgba(255,255,255,0.06);
+  background: rgba(12, 12, 12, 0.62);
+  backdrop-filter: blur(14px);
+  -webkit-backdrop-filter: blur(14px);
+}
+
+.site-banner__inner{
+  max-width: var(--container);
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: auto 1fr auto;
+  gap: 0.95rem;
+  align-items: start;
+  padding: 0.9rem 1rem;
+  border-radius: var(--radius-lg);
+  border: 1px solid rgba(201, 167, 76, 0.24);
+  background:
+    radial-gradient(520px 220px at 30% 0%, rgba(201,167,76,0.10), transparent 60%),
+    rgba(255,255,255,0.015);
+  box-shadow: 0 10px 28px rgba(0,0,0,0.35);
+}
+
+.site-banner__icon{
+  width: 38px;
+  height: 38px;
+  display: grid;
+  place-items: center;
+  border-radius: 12px;
+  border: 1px solid rgba(201, 167, 76, 0.28);
+  background: rgba(201,167,76,0.08);
+  box-shadow: 0 0 0 1px rgba(201,167,76,0.06) inset;
+  user-select: none;
+}
+
+.site-banner__title{
+  color: var(--golden);
+  font-weight: 700;
+  line-height: 1.2;
+  margin-bottom: 0.25rem;
+}
+
+.site-banner__text{
+  color: var(--anthracite);
+  line-height: 1.6;
+}
+
+.site-banner__actions{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.6rem;
+  margin-top: 0.7rem;
+}
+
+.site-banner__link{
+  display: inline-flex;
+  align-items: center;
+  gap: 8px;
+  padding: 0.52rem 0.85rem;
+  border-radius: 999px;
+  border: 1px solid rgba(201, 167, 76, 0.26);
+  color: var(--white);
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 0.92rem;
+  background: rgba(255,255,255,0.01);
+  transition: transform var(--transition), border-color var(--transition),
+              background var(--transition), color var(--transition);
+}
+
+.site-banner__link:hover,
+.site-banner__link:focus-visible{
+  transform: translateY(-2px);
+  border-color: rgba(201, 167, 76, 0.44);
+  background: rgba(255,255,255,0.03);
+  color: var(--golden);
+  outline: none;
+}
+
+.site-banner__close{
+  width: 38px;
+  height: 38px;
+  border-radius: 12px;
+  border: 1px solid rgba(255,255,255,0.10);
+  background: rgba(255,255,255,0.02);
+  color: var(--white);
+  cursor: pointer;
+  transition: transform var(--transition), border-color var(--transition),
+              background var(--transition);
+}
+
+.site-banner__close:hover,
+.site-banner__close:focus-visible{
+  transform: translateY(-2px);
+  border-color: rgba(201, 167, 76, 0.40);
+  background: rgba(201,167,76,0.08);
+  outline: none;
+}
+
+/* small screens */
+@media (max-width: 640px){
+  .site-banner{ padding: 0.65rem 1rem; }
+  .site-banner__inner{
+    grid-template-columns: auto 1fr;
+    grid-template-areas:
+      "icon content"
+      "close close";
+  }
+  .site-banner__icon{ grid-area: icon; }
+  .site-banner__content{ grid-area: content; }
+  .site-banner__close{
+    grid-area: close;
+    width: 100%;
+    height: 40px;
+    border-radius: 999px;
+  }
+}
+
   </style>
 </head>
 <body>
@@ -677,6 +801,31 @@
       <a href="contatti.html">Contatti</a>
     </nav>
   </header>
+
+  <!-- Site Status Banner -->
+<section class="site-banner" id="siteBanner" role="status" aria-live="polite" aria-label="Avviso sito in sviluppo">
+  <div class="site-banner__inner">
+    <div class="site-banner__icon" aria-hidden="true">⚠️</div>
+
+    <div class="site-banner__content">
+      <p class="site-banner__title">Sito in fase di sviluppo</p>
+      <p class="site-banner__text">
+        Stiamo completando l’inserimento dei <strong>cookie</strong> e aggiornando <strong>condizioni</strong> e
+        <strong>informative</strong>. Alcune sezioni potrebbero cambiare.
+      </p>
+
+      <div class="site-banner__actions" aria-label="Azioni avviso">
+        <a class="site-banner__link" href="privacy.html">Privacy & Cookie</a>
+        <a class="site-banner__link" href="termini.html">Condizioni</a>
+      </div>
+    </div>
+
+    <button class="site-banner__close" type="button" id="siteBannerClose" aria-label="Chiudi avviso">
+      ✕
+    </button>
+  </div>
+</section>
+
 
   <section class="hero" aria-label="Presentazione">
     <div class="hero-content fade-up">
@@ -888,6 +1037,24 @@
     updateProgress();
     window.addEventListener('scroll', updateProgress, { passive: true });
     window.addEventListener('resize', updateProgress);
+
+    // Site Status Banner: dismiss + persistence
+(() => {
+  const KEY = "tobia_site_banner_v1_dismissed";
+  const banner = document.getElementById("siteBanner");
+  const closeBtn = document.getElementById("siteBannerClose");
+
+  if (!banner || !closeBtn) return;
+
+  const dismissed = localStorage.getItem(KEY) === "1";
+  if (dismissed) banner.style.display = "none";
+
+  closeBtn.addEventListener("click", () => {
+    banner.style.display = "none";
+    localStorage.setItem(KEY, "1");
+  });
+})();
+
   </script>
 </body>
 </html>
