--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="it">
 <head>
   
-  <link rel="stylesheet" href="https://cookie.miniutti.it/cookie-banner/cookiecookiebanner.css">
-  <script defer src="https://cookie.miniutti.it/cookie-banner/cookiebanner.js"
+  <link rel="stylesheet" href="https://TUOUSER.github.io/cookie-mini/cookiebanner.css">
+  <script defer src="https://TUOUSER.github.io/cookie-mini/cookiebanner.js"
           data-ga="G-XXXXXXXXXX"
           data-policy="/cookie.html"
           data-privacy="/privacy.html"
@@ -660,7 +660,6 @@
         transform: none !important;
       }
     }
-
   </style>
 </head>
 <body>
@@ -889,6 +888,6 @@
     updateProgress();
     window.addEventListener('scroll', updateProgress, { passive: true });
     window.addEventListener('resize', updateProgress);
-
+  </script>
 </body>
 </html>
