--- a/index.html
+++ b/index.html
@@ -781,22 +781,22 @@
   <div class="logo-grid" role="list" aria-label="Loghi certificazioni">
     <!-- A1-A3 -->
     <div class="logo-item" role="listitem" title="Patentino Drone A1-A3">
-      <img src="cert-a1a3.webp" alt="Patentino Drone A1-A3">
+      <img src="cert-a1a3.svg" alt="Patentino Drone A1-A3">
     </div>
 
     <!-- CoverDrone Professionale -->
     <div class="logo-item" role="listitem" title="Assicurazione CoverDrone Professionale">
-      <img src="cert-coverdrone-pro.webp" alt="Assicurazione CoverDrone Professionale">
+      <img src="cert-coverdrone-pro.svg" alt="Assicurazione CoverDrone Professionale">
     </div>
 
     <!-- Codice Operatore (placeholder) -->
     <div class="logo-item" role="listitem" title="Codice Operatore UAS (in arrivo)">
-      <img src="cert-operatore-uas.webp" alt="Codice Operatore UAS (in arrivo)">
+      <img src="cert-operatore-uas.svg" alt="Codice Operatore UAS (in arrivo)">
     </div>
 
     <!-- Privacy / Liberatorie -->
     <div class="logo-item" role="listitem" title="Privacy & Liberatorie su richiesta">
-      <img src="cert-privacy.webp" alt="Privacy e liberatorie su richiesta">
+      <img src="cert-privacy.svg" alt="Privacy e liberatorie su richiesta">
     </div>
   </div>
 </section>
