--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="it">
 <head>
   
-  <link rel="stylesheet" href="https://cookie.miniutti.it/cookie-banner/cookiebanner.css">
-  <script defer src="https://cookie.miniutti.it/cookie-banner/cookiebanner.js"
+  <link rel="stylesheet" href="https://cookie.miniutti.it/cookiebanner.css">
+  <script defer src="https://cookie.miniutti.it/cookiebanner.js"
           data-ga="G-XXXXXXXXXX"
           data-policy="/cookie.html"
           data-privacy="/privacy.html"
