--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="it">
 <head>
   
-  <link rel="stylesheet" href="https://cookie.miniutti.it/cookiebanner.css">
-  <script defer src="https://cookie.miniutti.it/cookiebanner.js"
-          data-ga="G-XXXXXXXXXX"
-          data-policy="/cookie.html"
-          data-privacy="/privacy.html"
-          data-manage="floating"
-          data-manage-text="Cookie"></script>
+<link rel="stylesheet" href="https://cookie.miniutti.it/cookiebanner.css">
+<script defer src="https://cookie.miniutti.it/cookiebanner.js"
+        data-ga="G-XXXXXXXXXX"
+        data-policy="/cookie.html"
+        data-privacy="/privacy.html"
+        data-manage="floating"
+        data-manage-pos="br"
+        data-manage-label="Preferenze cookie"></script>
 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
