--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  
+
+<!--COOKIE-->
 <link rel="stylesheet" href="https://cookie.miniutti.it/cookiebanner.css">
 <script defer src="https://cookie.miniutti.it/cookiebanner.js"
-        data-ga="G-XXXXXXXXXX"
+        data-ga="G-Q2TKV83VYM"
         data-policy="/cookie.html"
         data-privacy="/privacy.html"
         data-manage="floating"
