--- a/privacy.html
+++ b/privacy.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
+  
+  <!--COOKIE-->
+<link rel="stylesheet" href="https://cookie.miniutti.it/cookiebanner.css">
+<script defer src="https://cookie.miniutti.it/cookiebanner.js"
+        data-ga="G-Q2TKV83VYM"
+        data-policy="/cookie.html"
+        data-privacy="/privacy.html"
+        data-manage="floating"
+        data-manage-pos="br"
+        data-manage-label="Preferenze cookie"></script>
+  
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>tobia.me | Privacy</title>
