--- a/404.html
+++ b/404.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html lang="it">
   
-  <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="c37c9760-3506-4b81-a2ec-fa0c3b1b5566"  type="text/javascript"></script>
-  
+<!--COOKIE-->
+<link rel="stylesheet" href="https://cookie.miniutti.it/cookiebanner.css">
+<script defer src="https://cookie.miniutti.it/cookiebanner.js"
+        data-ga="G-Q2TKV83VYM"
+        data-policy="/cookie.html"
+        data-privacy="/privacy.html"
+        data-manage="floating"
+        data-manage-pos="br"
+        data-manage-label="Preferenze cookie"></script>  
   
 <head>
   <meta charset="UTF-8" />
