--- a/index.html
+++ b/index.html
@@ -848,6 +848,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="contatti.html">Contatti</a></li>
+          <li><a href="legale.html">Legale</a></li>
         </ul>
       </div>
 
