--- a/contatti.html
+++ b/contatti.html
@@ -487,6 +487,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="progetti.html">Progetti</a></li>
           <li><a href="contatti.html">Contatti</a></li>
+          <li><a href="legale.html">Legale</a></li>
         </ul>
       </div>
 
