--- a/contatti.html
+++ b/contatti.html
@@ -393,7 +393,7 @@
 
     <nav aria-label="Navigazione principale">
       <a href="index.html">Home</a>
-      <a href="progetti.html">Progetti</a>
+      <a href="portfolio.html">Portfolio</a>
       <a href="contatti.html" aria-current="page">Contatti</a>
     </nav>
   </header>
@@ -485,7 +485,7 @@
         <h4>Link rapidi</h4>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="progetti.html">Progetti</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="contatti.html">Contatti</a></li>
           <li><a href="legale.html">Legale</a></li>
         </ul>
