--- a/legale.html
+++ b/legale.html
@@ -422,7 +422,7 @@
 
         <article class="link-card" role="listitem">
           <h3>Gestisci preferenze cookie</h3>
-          <p>Riapri il pannello preferenze (se il cookie banner è installato).</p>
+          <p>Riapri il pannello preferenze.</p>
           <a class="btn-golden" href="cookie.html#preferenze" id="open-cookie-prefs">Preferenze</a>
         </article>
 
