--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>tobia.me | Portfolio Videomaker</title>
-  <meta name="description" content="Portfolio di Tobia Miniutti, videomaker a Bologna. Riprese da terra e aeree con drone DJI Air 3S, montaggio video e contenuti per privati, eventi e attività." />
+  <title>tobia.me | Portfolio</title>
+  <meta name="description" content="Portfolio di Tobia Miniutti, videomaker a Bologna. Riprese da terra e aeree, montaggio video e contenuti per privati, eventi e attività." />
   <meta name="theme-color" content="#121212" />
   <link rel="icon" href="favicon.png" type="image/png" />
 
@@ -161,16 +161,13 @@
       }
     }
 
-
-
-
     /* HERO */
     .hero {
       position: relative;
       min-height: calc(100vh - var(--header-h));
       background:
         linear-gradient(to bottom, rgba(0,0,0,0.30), rgba(0,0,0,0.62)),
-        url('porta-brandeburgo.jpg') center/cover no-repeat;
+        url('porta-brandeburgo.webp') center/cover no-repeat;
       display: grid;
       place-items: center;
       text-align: center;
@@ -574,8 +571,7 @@
       outline-offset: 3px;
     }
 
-
-
+          
     /* FOOTER */
     footer {
       background: var(--carbon-deep);
@@ -691,7 +687,7 @@
   <main id="contenuto">
     <section class="about panel fade-up" aria-labelledby="chi-sono-title">
       <figure class="about-media">
-        <img src="assets/profile.jpg" alt="Ritratto di Tobia Miniutti" loading="lazy" decoding="async">
+        <img src="profile.jpg" alt="Ritratto di Tobia Miniutti" loading="lazy" decoding="async">
       </figure>
 
       <div class="about-text">
@@ -861,7 +857,7 @@
       </div>
     </div>
 
-    <div class="footer-bottom">© 2025-2026 tobia.me — Tutti i diritti riservati</div>
+    <div class="footer-bottom">© 2026 tobia.me — Tutti i diritti riservati</div>
   </footer>
 
   <script>
